Test Migration with Value Objects
Ive chosen code first db because I think its easier to observe if everything is working
Migration using properties worked, now i'm gonna try using Value Objects

--- a/BrenoABL.NunesSport/NSProductSys.Application/NSPS.Application.csproj
+++ b/BrenoABL.NunesSport/NSProductSys.Application/NSPS.Application.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\NunesSportsProductSys.Domain\NSPS.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ValueObjectsActions\" />
+  </ItemGroup>
+
 </Project>
