--- a/BrenoABL.NunesSport/NSProductSys.Infra/NSPS.Infra.csproj
+++ b/BrenoABL.NunesSport/NSProductSys.Infra/NSPS.Infra.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\NunesSportsProductSys.Domain\NSPS.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
